--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -300,10 +300,10 @@
                                         </p>
                                         <p><strong>19:30</strong>
                                              ЛУЧШЕЕ МЕСТО ЧТОБ ОЩУТИТЬ ВСЕ 
-ГОСТЕПРИИМСТВО УГОРЦЕВ ЖИТЬ В МЕСТНЫХ САДЫБАХ. Проживание в номерах на 2-3 человека 
-с удобствами в номере. Все красоты рядом! Коттеджи стоят под горой, 
-рядом лес. Во дворе есть беседка, мангал. В отдельном огороженном доме есть чан 
-для 5-6 человек с сероводородной водой
+                                            ГОСТЕПРИИМСТВО УГОРЦЕВ ЖИТЬ В МЕСТНЫХ САДЫБАХ. Проживание в номерах на 2-3 человека 
+                                            с удобствами в номере. Все красоты рядом! Коттеджи стоят под горой, 
+                                            рядом лес. Во дворе есть беседка, мангал. В отдельном огороженном доме есть чан 
+                                            для 5-6 человек с сероводородной водой
                                         </p>
                                         <p><strong>20:00 </strong>
                                              Cытнейший ужин, и свободное время для наслаждения отдыхом и красотами вокруг.
@@ -311,68 +311,75 @@
                                          <h5>День 2</5>
                                          <p><strong>08:00 </strong>                                                                  
                                              Ранний вкусный завтрак
-У нас масса вариантов как отдохнуть! Выбирайте на свой вкус!<br>
-Вариант 1 <br>ДЕГУСТАЦИЯ ГУЦУЛЬСКИХ БЛЮД И ЛУЧШИЙ ВОЗДУХ УКРАИНЫ! 
-Выезд на пастбище Крынта. В этом месте частоту воздуха разрезает игра трамбуют, самого длинного в мире музыкального инструмента. Так нас встречают пастухи. Старший в долине играет на свирели 
-и пастушьей углу.
-В хижине, где пастухи готовят сыр, ждет угощение, хлеб, чай, мед и сыр трех видов: брынза (рассыпчатый соленый овечий сыр), копченый будз и вурда (диетический нежный сыр, почти нет жирности 
-сладковатого вкуса) и обязательный элемент Карпат - живая вода - самогон на основе яблочного сока. Некий карпатский кальвадос.
-На обед стоит заказать настоящий полонинский бануш, который приготовят на дровах. Это праздничное блюдо гуцулов (кукурузная крупа приготовленная на сметане).
-Время для фотографий, релакса, удовольствия ... Море впечатлений, знаний, понимания гуцульской культуры и чрезвычайные эмоции.<br>
-Вариант 2<br>
-ВЗОЙДЕМ НА ВЕРШИНУ УКРАИНСКИХ КАРПАТ - ГОВЕРЛУ (2061 м). Профессиональный горный проводник позаботится, чтобы поход был интересным и безопасным.<br>
-Вариант 3<br>
-РЕЛАКС В КАРПАТСКИХ СПА - Чанах! А потом неспешные прогулки среди красот местной природы!
-<p><strong>18:00 </strong> Cамый вкусный и интересный ужин
-День 3 ДРАЙВ И ГОРНЫЕ РЕКИ ИЛИ ЧАШКА КОФЕ СРЕДИ ГОР!</p>
-<p><strong> 09:30 </strong> Для того чтобы почувствовать особую энергию Карпат в полной мере непременно следует попробовать рафтинг - сплав по реке Черный Черемош. Это активный отдых, который придаст драйва и 
-невероятных эмоций. Сплав не требует особой подготовки, а опытные инструкторы позаботятся о вашей безопасности и хорошее настроение.
-Стоимость 350 грн / чел. В стоимость входит: трансфер, снаряжение (жилет, каска, весло), работа инструктора.
-Сам сплав продолжается ориентировочно 1,5 часа. Все зависит от скорости течения и полноводности реки.
-Кто еще колеблется и не готов к речному драйва может провести утро на свое настроение: с чашечкой кофе среди горной панорамы, прогуляться Верховиной, подняться на смотровую площадку ...</p>
-<p><strong>13:00</strong> ЯВОРОВСКАЯ НИАГАРА И ФОРЕЛЬ ПО-КАРПАТСКИ! 
-Где как в Карпатах стоит попробовать королевскую рыбу - форель ?! Село Яворов славится давними традициями, а еще здесь Сокольское водопады, которые в период высокой воды                                     
-формируют свою - Яворовскую Ниагару. На этих горных потоках действует форельное хозяйство. Здесь мы и пообедаем ...
-Грибной суп, картофель по-деревенски, салат овощной, хлеб, компот и 
-свеженькая, только пойманная форель (200 грн / чел)
-Пока готовится форель мы осмотрим каскад Сокольском водопадов (5-15 метров).
-ПИКНИК НА ЗАКАТЕ СОЛНЦА В МАГИЧЕСКОМ МЕСТЕ!
-Выезжаем спецтехникой на Расписной Камень. Писан Камень вершина 1221 метров над уровнем моря, недалеко от Буковецкого перевала предел Покутсько-буковинских Карпат. Согласно легенде здесь 
-когда-то жили великаны, которые для увековечить себя в веках, на вершину снесли камни песчаники высотой в 20-30 метров. По дороге мы увидим потрясающую панораму Черногорского хребта с его 
-вершинами двухтысячниками: Поп Иван, Бребенескул, Гутин-Томнатик, Ребра, Говерла, Петрос, позвоночник Крынта и поселок Верховина.<br>
-День 4. 
-Вкусный завтрак. Выселение из отеля, но еще не прощаение! Впереди еще море интересного! 
-ДРЕВНЕЙШЕЕ МЕСТО КАРПАТ! Прогулка к Терношорськои Лады - каменной статуи богини-матери. Это уникальный скальный комплекс, украинский Стоунхендж. По представлению наших предков именно здесь 
-
-зародилось все живое. Это место силы и особой энергетики. Дорога живописная, вдоль горного потока и не сложная в прохождении (подъем вверх на 300-400 м, 30-40 мин в одну сторону).
-Колоритный обед
-15.30 КУПАНИЕ В СЕРЕБРИСТЫХ ВОДОПАДАХ Шешоры. 
-21.30 возвращение во Львов. Удобнее всего назад поезд в час ночи 70 Львов Мариуполь (через Запорожье)
-
-
-В стоимость входит:
-проезд комфортабельным транспортом по всему маршруту;
-самый колоритный местный экскурсовод в пути;
-проживание в лучших усадьбах зеленого туризма 3 ночи 2-3 местные номера удобства в номере;
-вкуснейшие 3 завтрака, 3 ужина
-
-Дополнительно оплачивается:
-Жд билеты до Львова и обратно( Плацкарт от 250грн/купе от 350 грн /чел в одну сторону);
-сплав по реке Черемош 350 грн;
-подъем  на Говерлу 300 грн;
-поход на пастбище Крынта с дегустацией сыров и кальвадоса 250 грн;
-банош на огне с брынзой + 50-60 грн;
-обед на форельном хозяйстве 220 грн 
-
-#Запорожье #НовыйповоротЗапорожье #путешествия #туризм #Буковель #ЗападнаяУкраинаизЗапорожья  #Яремче #экскурсииЗапорожье
-#кудапоехатьЗапорожье #достопримечательностиЗапорожье #афишаЗапорожья #ZAporizhya #Львовнавыходные #турнаЗападнуюУкраину
-
-
-
-
-
-
-                                        <hr>
+                                            У нас масса вариантов как отдохнуть! Выбирайте на свой вкус!<br>
+                                            Вариант 1 <br>ДЕГУСТАЦИЯ ГУЦУЛЬСКИХ БЛЮД И ЛУЧШИЙ ВОЗДУХ УКРАИНЫ! 
+                                            Выезд на пастбище Крынта. В этом месте частоту воздуха разрезает 
+                                             игра трамбуют, самого длинного в мире музыкального инструмента.
+                                             Так нас встречают пастухи. Старший в долине играет на свирели 
+                                            и пастушьей углу.
+                                            В хижине, где пастухи готовят сыр, ждет угощение, хлеб, чай, мед
+                                             и сыр трех видов: брынза (рассыпчатый соленый овечий сыр), копченый 
+                                             будз и вурда (диетический нежный сыр, почти нет жирности 
+                                            сладковатого вкуса) и обязательный элемент Карпат - живая вода - самогон
+                                             на основе яблочного сока. Некий карпатский кальвадос.
+                                            На обед стоит заказать настоящий полонинский бануш, который приготовят на
+                                             дровах. Это праздничное блюдо гуцулов (кукурузная крупа приготовленная на сметане).
+                                            Время для фотографий, релакса, удовольствия ... Море впечатлений, знаний, 
+                                             понимания гуцульской культуры и чрезвычайные эмоции.<br>
+                                            Вариант 2<br>
+                                            ВЗОЙДЕМ НА ВЕРШИНУ УКРАИНСКИХ КАРПАТ - ГОВЕРЛУ (2061 м). Профессиональный 
+                                             горный проводник позаботится, чтобы поход был интересным и безопасным.<br>
+                                            Вариант 3<br>
+                                            РЕЛАКС В КАРПАТСКИХ СПА - Чанах! А потом неспешные прогулки среди красот местной природы!
+                                        </p>
+                                            <p><strong>18:00 </strong> Cамый вкусный и интересный ужин.
+                                        </p>
+                                        <h5>День 3 </h5><h6>ДРАЙВ И ГОРНЫЕ РЕКИ ИЛИ ЧАШКА КОФЕ СРЕДИ ГОР!</h6>
+                                            <p><strong> 09:30 </strong> Для того чтобы почувствовать особую энергию Карпат в 
+                                                полной мере непременно следует попробовать рафтинг - сплав по реке Черный Черемош. 
+                                                Это активный отдых, который придаст драйва и 
+                                            невероятных эмоций. Сплав не требует особой подготовки, а опытные инструкторы позаботятся 
+                                                о вашей безопасности и хорошее настроение.
+                                            Стоимость 350 грн / чел. В стоимость входит: трансфер, снаряжение (жилет, каска, весло),
+                                                работа инструктора.
+                                            Сам сплав продолжается ориентировочно 1,5 часа. Все зависит от скорости течения и полноводности реки.
+                                            Кто еще колеблется и не готов к речному драйва может провести утро на свое настроение: с
+                                                чашечкой кофе среди горной панорамы, прогуляться Верховиной, подняться на 
+                                                смотровую площадку ...
+                                        </p>
+                                            <p><strong>13:00</strong> ЯВОРОВСКАЯ НИАГАРА И ФОРЕЛЬ ПО-КАРПАТСКИ! 
+                                            Где как в Карпатах стоит попробовать королевскую рыбу - форель ?! Село Яворов славится
+                                                давними традициями, а еще здесь Сокольское водопады, которые в период высокой воды                                     
+                                            формируют свою - Яворовскую Ниагару. На этих горных потоках действует
+                                                форельное хозяйство. Здесь мы и пообедаем ...
+                                            Грибной суп, картофель по-деревенски, салат овощной, хлеб, компот и 
+                                            свеженькая, только пойманная форель (200 грн / чел)
+                                            Пока готовится форель мы осмотрим каскад Сокольском водопадов (5-15 метров).
+                                            ПИКНИК НА ЗАКАТЕ СОЛНЦА В МАГИЧЕСКОМ МЕСТЕ!
+                                            Выезжаем спецтехникой на Расписной Камень. Писан Камень вершина 1221 метров над 
+                                                уровнем моря, недалеко от Буковецкого перевала предел Покутсько-буковинских
+                                                Карпат. Согласно легенде здесь 
+                                            когда-то жили великаны, которые для увековечить себя в веках, на вершину снесли 
+                                                камни песчаники высотой в 20-30 метров. По дороге мы увидим потрясающую
+                                                панораму Черногорского хребта с его 
+                                            вершинами двухтысячниками: Поп Иван, Бребенескул, Гутин-Томнатик, Ребра, Говерла,
+                                                Петрос, позвоночник Крынта и поселок Верховина.
+                                          </p>
+                                        <h5> День 4</h5>
+                                         <p>
+                                            Вкусный завтрак. Выселение из отеля, но еще не прощание! Впереди еще море интересного! 
+                                            ДРЕВНЕЙШЕЕ МЕСТО КАРПАТ! Прогулка к Терношорськои Лады - каменной статуи богини-матери. 
+                                                Это уникальный скальный комплекс, украинский Стоунхендж. 
+                                                По представлению наших предков именно здесь 
+                                            зародилось все живое. Это место силы и особой энергетики. Дорога живописная, вдоль 
+                                                горного потока и не сложная в прохождении (подъем вверх на 300-400 м, 30-40 мин в одну сторону).
+                                            Колоритный обед.
+                                        </p>
+                                        <p><strong> 15.30 КУПАНИЕ В СЕРЕБРИСТЫХ ВОДОПАДАХ Шешоры. </p>
+                                        <p><strong>21.30 возвращение во Львов. Удобнее всего назад поезд в час ночи 70 Львов 
+                                                Мариуполь (через Запорожье).
+                                        </p>
+                                            <hr>
                                        <!-- <p>
                                          <i> *время указано предварительно и может быть незначительно изменено без ущерба качеству экскурсии.</i>
                                         </p> -->
