--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -375,8 +375,8 @@
                                                 горного потока и не сложная в прохождении (подъем вверх на 300-400 м, 30-40 мин в одну сторону).
                                             Колоритный обед.
                                         </p>
-                                        <p><strong> 15.30 КУПАНИЕ В СЕРЕБРИСТЫХ ВОДОПАДАХ Шешоры. </p>
-                                        <p><strong>21.30 возвращение во Львов. Удобнее всего назад поезд в час ночи 70 Львов 
+                                        <p><strong> 15.30</strong> КУПАНИЕ В СЕРЕБРИСТЫХ ВОДОПАДАХ Шешоры. </p>
+                                        <p><strong>21.30</strong> возвращение во Львов. Удобнее всего назад поезд в час ночи 70 Львов 
                                                 Мариуполь (через Запорожье).
                                         </p>
                                             <hr>
