--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -336,7 +336,7 @@
                                         </p>
                                             <p><strong>18:00 </strong> Cамый вкусный и интересный ужин.
                                         </p>
-                                        <h5>День 3 </h5><h6>ДРАЙВ И ГОРНЫЕ РЕКИ ИЛИ ЧАШКА КОФЕ СРЕДИ ГОР!</h6>
+                                        <h5>День 3 - ДРАЙВ И ГОРНЫЕ РЕКИ ИЛИ ЧАШКА КОФЕ СРЕДИ ГОР!</h5>
                                             <p><strong> 09:30 </strong> Для того чтобы почувствовать особую энергию Карпат в 
                                                 полной мере непременно следует попробовать рафтинг - сплав по реке Черный Черемош. 
                                                 Это активный отдых, который придаст драйва и 
@@ -381,8 +381,8 @@
                                         <p><strong>21.30</strong> возвращение во Львов. Удобнее всего назад поезд в час ночи 70 Львов 
                                                 Мариуполь (через Запорожье).
                                         </p>
-                                            <hr>
-                                       <!-- <p>
+                                        <!--    <hr>
+                                        <p>
                                          <i> *время указано предварительно и может быть незначительно изменено без ущерба качеству экскурсии.</i>
                                         </p> -->
                                     </div>
