--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -218,6 +218,30 @@
                 </div>
                 <!--  //Одесса  -->
                 
+	        <!--  ЛОЛ -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-LOL.html">
+                            <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
+                        </a>
+                       <!-- <p><span class="fa fa-tags"></span> <span>180грн.</span></p>-->
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-LOL.html">
+                                Лол
+                            </a>
+                        </h5>
+                        <p class="">Праздник в стиле Лол с любимыми персонажами!</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //ЛОЛ -->  
+		    
                 <!--  Лимонарий   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
