--- a/packages.html
+++ b/packages.html
@@ -385,7 +385,7 @@
                 <!--  //TikTok-->
 
                 <!--  ЛОЛ -->
-                <div class="col-lg-3 col-sm-6 mb-5">
+                <!--  <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-LOL.html">
                             <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
@@ -405,9 +405,33 @@
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <!--  //ЛОЛ -->
-
+		    
+	        <!--  Яворовская Ниагара -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html">
+                            <img src="images/Yavorovskaya-niagara-min.jpg" alt="Яворовская Ниагара" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>4200грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html">
+                                Яворовская Ниагара
+                            </a>
+                        </h5>
+                        <p class="">Читай полностью описание и бронируй!</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Апреля - 03 Мая</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>4 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Яворовская Ниагара -->
+		    
                 <!--  Карпаты -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
