--- a/page-LOL.html
+++ b/page-LOL.html
@@ -124,7 +124,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span><!-- Не Запланировано -->3 Апреля 2021 Года </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано <!--3 Апреля 2021 Года--> </span>
                                 </li>
                             </ul>
                         </div>
@@ -141,11 +141,11 @@
                             Море веселья и отличного настроения!
                         </p>
                         <hr>
-                        <ul class="listing">
+                       <!-- <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>180 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
-                        <br>
+                        <br>-->
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
                         </p>
