--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -333,7 +333,10 @@
                                         </p>
                                         <p><strong>18:00 </strong> Cамый вкусный и интересный ужин.</p>
                                         <hr>
-                                        <h5>День 3 - ДРАЙВ И ГОРНЫЕ РЕКИ ИЛИ ЧАШКА КОФЕ СРЕДИ ГОР!</h5>
+                                        <h5>День 3</h5>
+                                        <p> 
+                                          ДРАЙВ И ГОРНЫЕ РЕКИ ИЛИ ЧАШКА КОФЕ СРЕДИ ГОР! 
+                                        </p>
                                         <p><strong> 09:30 </strong> Для того чтобы почувствовать особую энергию Карпат в 
                                                 полной мере непременно следует попробовать рафтинг - сплав по реке Черный Черемош. 
                                                 Это активный отдых, который придаст драйва и 
