--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -111,17 +111,17 @@
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                      <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                     <li class="breadcrumb-item active" aria-current="page">Яворовская Ниагара</li>
+                     <li class="breadcrumb-item active" aria-current="page">Львов на выходные</li>
                    </ol>
                 </nav>
                </div>
               <!-- //Хлебные крошки -->
               
                   <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Яворовская Ниагара</h3>
+                    <h3 class="title">Львов на выходные</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/Yavorovskaya-niagara-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/Lviv-for-weekend-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
@@ -131,7 +131,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                         Яворовская Ниагара
+                         Львов на выходные
                         </h4>
                        <p class="txt-alg-jf">
                            Яворовская Ниагара. Буковель и форелевое хозяйство. 
