--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -399,59 +399,59 @@
                         <main class="main">
                             <div class="container">
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #1" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-1.jpg ">
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #1" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-1.jpg ">
                                     <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-1.jpg"></a>
                                 </div>
                               </div>
 
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #2" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-2.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-2.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #2" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-2.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-2.jpg"></a>
                                 </div>
                               </div>
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #3" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-3.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-3.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #3" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-3.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-3.jpg"></a>
                                 </div>
                               </div>
 
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #4" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-4.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-4.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #4" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-4.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-4.jpg"></a>
                                 </div>
                               </div>
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #5" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-5.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-5.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #5" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-5.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-5.jpg"></a>
                                 </div>
                               </div>
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #6" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-8.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-8.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #6" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-6.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-6.jpg"></a>
                                 </div>
                               </div>
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #7" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-6.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-6.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #7" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-1.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-1.jpg"></a>
                                 </div>
                               </div>
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #8" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-7.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-7.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #8" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-2.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-2.jpg"></a>
                                 </div>
                               </div>
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #8" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-2.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-2.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львов на выходные #8" data-fancybox="gallery"
+                                    href="/images/Lviv-for-weekend/Lviv-for-weekend-3.jpg">
+                                    <img src="/images/Lviv-for-weekend/Lviv-for-weekend-3.jpg"></a>
                                 </div>
                               </div>
                             </div>
