--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -125,7 +125,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>30 Апреля - 03 Мая 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Каждые выходные 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
