--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -222,10 +222,8 @@
                                     <div class="card-body txt-alg-jf">
                                         <h5> День 1 </h5>
                                         <p><strong>13:30-14:00</strong>
-                                            Встречаем Вас на ж/д вокзале г.Львов. Прибытие поезда во Львов
-                                            из Запорожья, в 05:30, из Днепра в 08:30.
-                                         </p>
-                                        <p><strong>13:00 </strong>
+                                            Встречаем Вас на Ж/Д вокзале г.Львов с трансфером в гостиницу. Поезда из Запорожья/Днепра
+                                            <strong>13:00 </strong>
                                             Приглашаем Вас на пешеходную ПРОГУЛКУ-ЭКСКУРСИЮ
                                             С САМЫМИ КОЛОРИТНЫМ ЛЬВОВСКИМ ЭКСКУРСОВОДОМ "Львов в первый раз".
                                             Вы увидите главные изюминки Старого города: 
