--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -222,8 +222,9 @@
                                     <div class="card-body txt-alg-jf">
                                         <h5> День 1 </h5>
                                         <p><strong>13:30-14:00</strong>
-                                            Встречаем Вас на Ж/Д вокзале г.Львов с трансфером в гостиницу. Поезда из Запорожья/Днепра
-                                            <strong>13:00 </strong>
+                                            Встречаем Вас на Ж/Д вокзале г.Львов с трансфером в гостиницу. Поезда из Запорожья/Днепра в 13:00. 
+                                       <p/>
+                                       <p>
                                             Приглашаем Вас на пешеходную ПРОГУЛКУ-ЭКСКУРСИЮ
                                             С САМЫМИ КОЛОРИТНЫМ ЛЬВОВСКИМ ЭКСКУРСОВОДОМ "Львов в первый раз".
                                             Вы увидите главные изюминки Старого города: 
