--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -226,7 +226,7 @@
                                        <p/>
                                        <p>
                                             Приглашаем Вас на пешеходную ПРОГУЛКУ-ЭКСКУРСИЮ
-                                            С САМЫМИ КОЛОРИТНЫМ ЛЬВОВСКИМ ЭКСКУРСОВОДОМ "Львов в первый раз".
+                                            С САМЫМ КОЛОРИТНЫМ ЛЬВОВСКИМ ЭКСКУРСОВОДОМ "Львов в первый раз".
                                             Вы увидите главные изюминки Старого города: 
                                             сердце города - площадь Рынок и Ратушу
                                             иезуитский костел - место, где остановилось время
