--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
             <!-- block -->
             <div class="row">
                 <div class="col-lg-9">
-                    <h3 class="section-title-left">Популярные публикации</h3>
+                    <h3 class="section-title-left">Новости Запорожья</h3>
                     <div class="row">
                         <div class="col-lg-5 col-md-6 item">
                             <div class="card">
@@ -237,7 +237,7 @@
 
             <!-- block -->
             <div class="item mt-5 pt-lg-5">
-                <h3 class="section-title-left">Основные публикации </h3>
+                <h3 class="section-title-left">Достопримечательности Запорожья </h3>
                 <div class="row">
                     <div class="col-lg-5 col-md-6">
                         <div class="list-view list-view1">
@@ -342,7 +342,7 @@
             <!-- block -->
             <div class="row mt-5 pt-5">
                 <div class="col-lg-9 most-recent">
-                    <h3 class="section-title-left">Последие публикации </h3>
+                    <h3 class="section-title-left">Советы Туристам</h3>
                     <div class="list-view ">
                         <div class="grids5-info img-block-mobile">
                             <div class="blog-info align-self">
