--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
                                 <div class="card-header p-0 position-relative">
                                     <a href="#blog-single">
                                         <img class="card-img-bottom d-block radius-image" src="assets/images/b1.jpg"
-                                            alt="Card image cap">
+                                            alt="Помогите Изображению">
                                     </a>
                                 </div>
                                 <div class="card-body p-0 blog-details">
@@ -207,7 +207,7 @@
                     <div class="col-lg-6">
                         <a href="#blog-single">
                             <img class="card-img-bottom d-block radius-image" src="assets/images/p3.jpg"
-                                alt="Card image cap">
+                                alt="Помогите Изображению">
                         </a>
                     </div>
                     <div class="col-lg-6 blog-details align-self mt-lg-0 mt-sm-5 mt-4">
@@ -653,6 +653,11 @@
 
         </div>
     </div>
+    
+     <button onclick="topFunction()" id="movetop" title="Go to top">
+       <span class="fa fa-angle-up"></span>
+     </button>
+    
     <!-- footer -->
     <!--<footer class="w3l-footer-16">
         <div class="footer-content py-lg-5 py-4 text-center">
@@ -699,8 +704,8 @@
             }
         </script>
         <!-- //move top -->
-    </footer>
-    <!-- //footer -->
+   <!-- </footer>
+     //footer -->
 
     <!-- Template JavaScript -->
     <script src="assets/js/theme-change.js"></script>
