--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                             <div class="card">
                                 <div class="card-header p-0 position-relative">
                                     <a href="#blog-single">
-                                        <img class="card-img-bottom d-block radius-image" src="assets/images/b1.jpg"
+                                        <img class="card-img-bottom d-block radius-image" src="./images/b1.jpg"
                                             alt="Помогите Изображению">
                                     </a>
                                 </div>
@@ -206,7 +206,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <a href="#blog-single">
-                            <img class="card-img-bottom d-block radius-image" src="assets/images/p3.jpg"
+                            <img class="card-img-bottom d-block radius-image" src="./images/p3.jpg"
                                 alt="Помогите Изображению">
                         </a>
                     </div>
@@ -241,7 +241,8 @@
                     <div class="col-lg-5 col-md-6">
                         <div class="list-view list-view1">
                             <div class="grids5-info">
-                                <a href="#blog-single" class="d-block zoom"><img src="assets/images/4.jpg" alt=""
+                                <a href="#blog-single" class="d-block zoom">
+                                    <img src="./images/4.jpg" alt=""
                                         class="img-fluid radius-image news-image"></a>
                                 <div class="blog-info align-self">
                                     <a href="#blog-single" class="blog-desc1">Edit/proofread your post, and fix your
@@ -261,7 +262,8 @@
                                 </div>
                             </div>
                             <div class="grids5-info mt-5">
-                                <a href="#blog-single" class="d-block zoom"><img src="assets/images/5.jpg" alt=""
+                                <a href="#blog-single" class="d-block zoom">
+                                    <img src="./images/5.jpg" alt=""
                                         class="img-fluid radius-image news-image"></a>
                                 <div class="blog-info align-self">
                                     <a href="#blog-single" class="blog-desc1">The Beginner's Guide to Starting a
@@ -330,7 +332,8 @@
 
                     <div class="col-lg-2 col-sm-6 mt-lg-0 mt-5">
                         <div class="ad-img">
-                            <a href="#ad-img"><img src="assets/images/ad1.jpg" class="img-fluid" alt="ad image" /></a>
+                            <a href="#ad-img">
+                                <img src="./images/ad1.jpg" class="img-fluid" alt="Помогите Изображению" /></a>
                         </div>
                     </div>
 
