--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,8 @@
 
     <div class="w3l-homeblock1 py-5">
         <div class="container pt-lg-5 pt-md-4">
-            <!-- block -->
+            
+            <!-- Блок Новости Запорожья -->
             <div class="row">
                 <div class="col-lg-9">
                     <h3 class="section-title-left">Новости Запорожья</h3>
@@ -212,7 +213,7 @@
                     </div>
                 </div>
             </div>
-            <!-- //block -->
+            <!-- //Блок Новости Запорожья  -->
 
 
             <!-- block -->
@@ -249,7 +250,7 @@
             </div>
             <!-- //block-->
 
-            <!-- block -->
+            <!-- Блок Достопримечательности Запорожья -->
             <div class="item mt-5 pt-lg-5">
                 <h3 class="section-title-left">Достопримечательности Запорожья </h3>
                 <div class="row">
@@ -358,9 +359,9 @@
 
                 </div>
             </div>
-            <!-- //block-->
+            <!-- //Блок Достопримечательности Запорожья -->
 
-            <!-- block -->
+            <!-- Блок Советы Туристам -->
             <div class="row mt-5 pt-5">
                 <div class="col-lg-9 most-recent">
                     <h3 class="section-title-left">Советы Туристам</h3>
@@ -682,7 +683,7 @@
                     </div>
                 </div>
             </div>
-            <!-- //block-->
+            <!-- // Блок Советы Туристам-->
 
         </div>
     </div>
